content/browser/network_service_client.h
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define CONTENT_BROWSER_NETWORK_SERVICE_IMPL_H_
 
 #include "base/macros.h"
+#include "base/memory/memory_pressure_listener.h"
 #include "build/build_config.h"
 #include "content/common/content_export.h"
 #include "mojo/public/cpp/bindings/binding.h"
@@ -90,12 +91,17 @@ class CONTENT_EXPORT NetworkServiceClient
   // net::CertDatabase::Observer implementation:
   void OnCertDBChanged() override;
 
+  void OnMemoryPressure(
+      base::MemoryPressureListener::MemoryPressureLevel memory_presure_level);
+
 #if defined(OS_ANDROID)
   void OnApplicationStateChange(base::android::ApplicationState state);
 #endif
 
  private:
   mojo::Binding<network::mojom::NetworkServiceClient> binding_;
+
+  std::unique_ptr<base::MemoryPressureListener> memory_pressure_listener_;
 
 #if defined(OS_ANDROID)
   std::unique_ptr<base::android::ApplicationStatusListener>
