services/network/public/cpp/network_param_mojom_traits.h
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef SERVICES_NETWORK_PUBLIC_CPP_NETWORK_PARAM_MOJOM_TRAITS_H_
 #define SERVICES_NETWORK_PUBLIC_CPP_NETWORK_PARAM_MOJOM_TRAITS_H_
 
+#include "base/memory/memory_pressure_listener.h"
 #include "build/build_config.h"
 #include "mojo/public/cpp/bindings/struct_traits.h"
 #include "net/http/http_version.h"
@@ -41,6 +42,16 @@ struct EnumTraits<network::mojom::ApplicationState,
                         base::android::ApplicationState* output);
 };
 #endif
+
+template <>
+struct EnumTraits<network::mojom::MemoryPressureLevel,
+                  base::MemoryPressureListener::MemoryPressureLevel> {
+  static network::mojom::MemoryPressureLevel ToMojom(
+      base::MemoryPressureListener::MemoryPressureLevel input);
+  static bool FromMojom(
+      network::mojom::MemoryPressureLevel input,
+      base::MemoryPressureListener::MemoryPressureLevel* output);
+};
 
 }  // namespace mojo
 
